--- a/.travis.yml
+++ b/.travis.yml
@@ -1,22 +1,20 @@
 os: linux
+sudo: 
+language: "minimal"
 services:
-- docker
+  - docker
+
+before_script:
+  - docker pull toliak/bootstrap-cpp
 
 jobs:
   include:
-  - name: "checks"
-    script:
-    - docker run -v `pwd`:`pwd` -w `pwd` --cap-add=SYS_PTRACE -t rusdevops/bootstrap-cpp scripts/checks.sh
-  - name: "tests"
-    script:
-    - docker run -v `pwd`:`pwd` -w `pwd` -t rusdevops/bootstrap-cpp scripts/tests.sh
-  - name: "quality"
-    script:
-    - ./scripts/genenv.sh
-    - docker run --env-file .env -v `pwd`:`pwd` -w `pwd` -t rusdevops/bootstrap-cpp scripts/coverage.sh
-    # The bot has gone...
-    # - docker run --env-file .env -v `pwd`:`pwd` -w `pwd` -t rusdevops/bootstrap-cpp scripts/duplication.sh
+    - name: "checks"
+      script:
+        - chmod 755 scripts/*.sh
+        - docker run -v `pwd`:`pwd` -w `pwd` rusdevops/bootstrap-cpp ./scripts/checks.sh
+ 
+
 
 notifications:
-    email: false
-
+  email: false
